# retail_demand_forecast_service

./: .gitignore  README.md
.github/workflows/: hw8-ci.yml
hw1/: business_analysis.md
hw2/: prototype.md
hw4/: .gitignore  README.md  _quarto.yml  dataset_description.md  dataset_description.qmd
hw4/notebooks/: eda.qmd
hw4/scripts/: build_weekly.py  download_m5.py  schemas.py
hw5/: .gitignore  baseline_solution.ipynb  baseline_solution.qmd
hw5/scripts/: ablate_events.py  baselines_extra.py  bayes_structural.py  cold_start.py  decompose.py  eval_extras.py  events.py  features_direct.py  lost_sales.py  metriclog.py  metrics.py  model_lgb.py  quantiles.py  reconcile.py  run_cv.py  schemas.py  shap_importance.py  (+3 more)
hw7/: baseline_solution.ipynb
hw8/: .dockerignore  .env.example  .gitattributes  Dockerfile  README.md  compose.override.yaml  compose.yaml  justfile  pyproject.toml
stage8/: Dockerfile  README.md  alembic.ini  compose.yaml  pyproject.toml
stage8/alembic/: env.py
stage8/alembic/versions/: 0001_initial.py
stage8/dags/: retrain_dag.py
stage8/monitoring/: gen_dashboards.py
stage8/monitoring/alertmanager/: alertmanager.yml
stage8/monitoring/grafana/dashboards/: containers.json  forecast-service.json
stage8/monitoring/prometheus/: alerts.yml  prometheus.yml
stage8/nginx/: nginx.conf
stage8/scripts/: baseline_hybrid_eval.py  improve_eval.py  train_artifact.py  tune_eval.py
stage8/src/forecast_service/: api.py  crud.py  db.py  log.py  monitoring.py  mq.py  prom.py  seed.py  worker.py
stage8/tests/: test_analytics.py  test_monitoring.py
(+50 files in other folders)
