[project]
name = "forecast-service"
version = "0.1.0"
description = "Сервис прогнозирования недельного спроса в ритейле (M5, LightGBM)"
requires-python = ">=3.10,<3.13"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "jinja2>=3.1",
    "pydantic>=2",
    "pydantic-settings>=2",
    "sqlmodel>=0.0.16",
    "psycopg[binary]>=3.1",
    "pika>=1.3",
    "pandas>=2",
    "numpy<2",
    "pyarrow>=15",
    "lightgbm>=4.5,<5",
    "pandera>=0.18",
    "plotly>=5.20",
    "prometheus-client>=0.20",
    "alembic>=1.13",
]

[dependency-groups]
dev = ["pytest>=8", "httpx>=0.27", "ruff>=0.6"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/forecast_service"]

[tool.ruff]
line-length = 110

[tool.ruff.lint.per-file-ignores]
# офлайн-скриптам нужен sys.path.insert до импорта кода stage5
"scripts/*" = ["E402"]
